--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@ ${message}`;
     <h2><center>About Us</center></h2>
     <p>
       <center>We are a Game Development & Recovery Studio from Nepal, specialized in rejuvenating struggling games of passionate developers. Founded by young and passionate game development freelancers, our expert team dives deep into your game's mechanics, player behavior, and monetization strategies to determine and execute the steps needed to turn things around.</center>
+      <br><center>We recruited a team of very young, innovative and brilliant minds & trained them in one specialized field each. This has made us a very efficient and technically brilliant group, and we believe that the demographic of our team is well-suited to understand and work with modern game development trends mostly catered towards teenagers.</center>
       <br><center>No upfront, no fees: Only a share of the growth we create.</center>
       <center><B>If we reach out, it's because your game has unrealized potential, ready to be revived.</B></center>
     </p>
@@ -171,11 +172,11 @@ ${message}`;
   <!-- ROW MEMBERS -->
 
   <div class="glass team-card">
-    <div class="member-image"><img src="Chirag.jpg" alt="Chirag Sapkota"></div>
+    <div class="member-image"><img src="Chirag.jpg" alt="Chirag Sharma"></div>
     <div class="member-info">
-      <h4>Chirag</h4>
-      <p>Administrator</p>
-      <span class="member-desc">Manages information and game version control.</span>
+      <h4>Chirag Sharma</h4>
+      <p>Community Manager</p>
+      <span class="member-desc">Oversees community engagement and player feedback management.</span>
     </div>
   </div>
 
@@ -188,26 +189,36 @@ ${message}`;
     </div>
   </div>
 
+
   <div class="glass team-card">
-    <div class="member-image"><img src="Siddid.jpg" alt="Siddid"></div>
+    <div class="member-image"><img src="Aayusha.webp" alt="Aayusha"></div>
     <div class="member-info">
-      <h4>Siddid</h4>
+      <h4>Aayusha K.C.</h4>
+      <p>Creative Lead</p>
+      <span class="member-desc">Leads creative direction and design for all projects.</span>
+    </div>
+  </div>
+
+  <div class="glass team-card">
+    <div class="member-image"><img src="Siddid.jpg" alt="Siddid Pandey"></div>
+    <div class="member-info">
+      <h4>Siddid Pandey</h4>
       <p>QA Lead</p>
       <span class="member-desc">Ensures game balance and player experience quality.</span>
     </div>
   </div>
 
   <div class="glass team-card">
-    <div class="member-image"><img src="default.jpg" alt="Deepak"></div>
+    <div class="member-image"><img src="prajwol.jpg" alt="Prajwol"></div>
     <div class="member-info">
-      <h4>Shreemad</h4>
-      <p>Systems Head</p>
-      <span class="member-desc">Develops mechanics and systems for game upliftment.</span>
+      <h4>Prajwol Chapagain</h4>
+      <p>Resources Manager</p>
+      <span class="member-desc">Manages necessary resources of all sorts required for the business.</span>
     </div>
   </div>
 
   <div class="glass team-card">
-    <div class="member-image"><img src="default.jpg" alt="Shreemad"></div>
+    <div class="member-image"><img src="default.jpg" alt="Deepak"></div>
     <div class="member-info">
       <h4>Deepak</h4>
       <p>Programmer</p>
@@ -225,7 +236,7 @@ ${message}`;
   </div>
 
   <div class="glass team-card">
-    <div class="member-image"><img src="default.jpg" alt="Dipesh"></div>
+    <div class="member-image"><img src="defaultwoman.png" alt="Samreen"></div>
     <div class="member-info">
       <h4>Samreen Khadka</h4>
       <p>QA Tester</p>
@@ -234,15 +245,24 @@ ${message}`;
   </div>
 
   <div class="glass team-card">
-    <div class="member-image"><img src="default.jpg" alt="Dipesh"></div>
+    <div class="member-image"><img src="default.jpg" alt="Samraj"></div>
     <div class="member-info">
-      <h4>Aayusha KC</h4>
+      <h4>Samraj Thapa</h4>
       <p>QA Tester</p>
       <span class="member-desc">Checks for bugs and potential improvements.</span>
     </div>
   </div>
 
-</div>
+  <div class="glass team-card">
+    <div class="member-image"><img src="default.jpg" alt="Shreemad"></div>
+    <div class="member-info">
+      <h4>Shreemad Pokhrel</h4>
+      <p>Programmer</p>
+      <span class="member-desc">Codes the designed systems and functions.</span>
+    </div>
+  </div>
+
+
 
 </section>
 
@@ -261,6 +281,13 @@ ${message}`;
         <h3>+18% Positive Review</h3>
         <p>Average improvement in Like-To-Dislike ratio per game.</p>
       </div>
+    </div>
+    <div class="wins-mini-grid">
+     <div class="glass mini-win"><span class="mini-ico">🎮</span><span>20+ Games Revived</span></div>
+     <div class="glass mini-win"><span class="mini-ico">🧑🏻‍💻</span><span>35+ Developers Served</span></div>
+     <div class="glass mini-win"><span class="mini-ico">💵</span><span>$1M+ Generated</span></div>
+     <div class="glass mini-win"><span class="mini-ico">🌐</span><span>30M+ Players Engaged</span></div>
+     <div class="glass mini-win"><span class="mini-ico">🧑‍🤝‍🧑</span><span>10+ Employment Provided</span></div>
     </div>
   </section>
 
@@ -309,7 +336,6 @@ ${message}`;
 
   <div class="footer-bottom">© 2025 Bevel Creatives Pvt. Ltd. All rights reserved.</div>
 </section>
-  
 <script>
   // LOADER SCRIPT
   if ('scrollRestoration' in history) {
@@ -388,7 +414,7 @@ ${message}`;
 
   init();
   animate();
-</script>
 
+</script>
 </body>
 </html>
