--- a/index.html
+++ b/index.html
@@ -320,13 +320,13 @@ ${message}`;
       </div>
 
       <div class="glass info-card">
-        <h4>Phone</h4>
-        <p>+977 9849268982</p>
+        <h4>Discord</h4>
+        <p>@BeveledEdge</p>
       </div>
 
       <div class="glass info-card">
-        <h4>Location</h4>
-        <p>Kathmandu, Nepal</p>
+        <h4>LinkedIn</h4>
+        <p>https://www.linkedin.com/in/bibidh/</p>
       </div>
     </div>
   </div>
