--- a/article.html
+++ b/article.html
@@ -15,12 +15,21 @@
     <div class="logo">
       <img src="BevelCreatives_transparent.png" alt="Bevel Logo" class="header-logo">
       Bevel<span>Creatives</span>
-    </div>
-    <nav>
+    </div><nav>
       <a href="index.html#home">Home</a>
       <a href="blog.html">Blogs</a>
       <a href="index.html#contact">Contact</a>
     </nav>
+    <button class="hamburger" type="button" aria-label="Open menu" aria-expanded="false" aria-controls="mobile-menu">
+      <span></span><span></span><span></span>
+    </button>
+
+    <div id="mobile-menu" class="mobile-menu glass" hidden>
+      <a href="index.html#home">Home</a>
+      <a href="blog.html">Blogs</a>
+      <a href="index.html#contact">Contact</a>
+    </div>
+
   </header>
 
   <main class="article-reader-container">
@@ -108,5 +117,70 @@
     }
     init(); animate();
   </script>
+
+
+<script>
+document.addEventListener("DOMContentLoaded", () => {
+  const btn = document.querySelector(".hamburger");
+  const menu = document.getElementById("mobile-menu");
+  const desktopNav = document.querySelector(".navbar nav");
+
+  if (!btn || !menu) return;
+
+  const closeMenu = () => {
+    btn.classList.remove("is-open");
+    btn.setAttribute("aria-expanded", "false");
+    menu.hidden = true;
+    document.body.classList.remove("menu-open");
+  };
+
+  const openMenu = () => {
+    btn.classList.add("is-open");
+    btn.setAttribute("aria-expanded", "true");
+    menu.hidden = false;
+    document.body.classList.add("menu-open");
+  };
+
+  const toggleMenu = () => {
+    const isOpen = btn.classList.contains("is-open");
+    if (isOpen) closeMenu();
+    else openMenu();
+  };
+
+  btn.addEventListener("click", (e) => {
+    e.stopPropagation();
+    toggleMenu();
+  });
+
+  // Close when clicking a link
+  menu.addEventListener("click", (e) => {
+    const a = e.target.closest("a");
+    if (a) closeMenu();
+  });
+
+  // Close on outside click
+  document.addEventListener("click", (e) => {
+    if (menu.hidden) return;
+    if (e.target.closest("#mobile-menu")) return;
+    if (e.target.closest(".hamburger")) return;
+    closeMenu();
+  });
+
+  // Close on Escape
+  document.addEventListener("keydown", (e) => {
+    if (e.key === "Escape") closeMenu();
+  });
+
+  // Safety: if resized to desktop, close
+  window.addEventListener("resize", () => {
+    if (window.innerWidth > 768) closeMenu();
+  });
+
+  // If desktop nav is visible, ensure menu stays closed
+  if (desktopNav && window.getComputedStyle(desktopNav).display !== "none") {
+    closeMenu();
+  }
+});
+</script>
 </body>
 </html>
