Glow edges and hover fixed

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@ ${message}`;
     <div class="member-info">
       <h4>Siddid Pandey</h4>
       <p>QA Lead</p>
-      <span class="member-desc">Ensures game balance and player experience quality.</span>
+      <span class="member-desc">Leads quality assurance assessments and allocates QA resources.</span>
     </div>
   </div>
 
@@ -272,11 +272,11 @@ ${message}`;
   </div>
 
   <div class="glass team-card">
-    <div class="member-image"><img src="defaultwoman.png" alt="Samreen"></div>
+    <div class="member-image"><img src="samreen.jpg" alt="Samreen"></div>
     <div class="member-info">
       <h4>Samreen Khadka</h4>
-      <p>QA Tester</p>
-      <span class="member-desc">Checks for bugs and potential improvements.</span>
+      <p>QA Strategist</p>
+      <span class="member-desc">Develops strong strategies to ensure quality assurance goes smooth.</span>
     </div>
   </div>
 
