--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ ${message}`;
   <section id="about" class="section glass">
     <h2><center>About Us</center></h2>
     <p>
-      <center>We are a Game Development & Recovery Studio from Nepal, specialized in rejuvenating struggling games of passionate developers. Founded by young and passionate game development freelancers, our expert team dives deep into your game's mechanics, player behavior, and monetization strategies to determine and execute the steps needed to turn things around.</center>
+      <center>Bevel Creatives is a Game Development & Recovery Studio from Nepal founded by Bibidh Gautam & Kaustuv Kumar Batajoo, specialized in rejuvenating struggling games of passionate developers. Founded by young and passionate game development freelancers, our expert team dives deep into your game's mechanics, player behavior, and monetization strategies to determine and execute the steps needed to turn things around.</center>
       <br><center>We recruited a team of very young, innovative and brilliant minds & trained them in one specialized field each. This has made us a very efficient and technically brilliant group, and we believe that the demographic of our team is well-suited to understand and work with modern game development trends mostly catered towards teenagers.</center>
       <br><center>No upfront, no fees: Only a share of the growth we create.</center>
       <center><B>If we reach out, it's because your game has unrealized potential, ready to be revived.</B></center>
